# stock-advisor-ai

./: .gitignore  README.md  pyproject.toml
memory/: chroma.sqlite3  long_term_memory_storage.db
src/stock_advisor/: crew.py  main.py
src/stock_advisor/config/: agents.yaml  tasks.yaml
src/stock_advisor/tools/: push_tool.py
