[project]
name = "stock_advisor"
version = "0.1.0"
description = "stock_advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
stock_advisor = "stock_advisor.main:run"
run_crew = "stock_advisor.main:run"
train = "stock_advisor.main:train"
replay = "stock_advisor.main:replay"
test = "stock_advisor.main:test"
run_with_trigger = "stock_advisor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
